Added language etc

--- a/MyWedding/MyWedding/Resources/Wedding.en-GB.resx
+++ b/MyWedding/MyWedding/Resources/Wedding.en-GB.resx
@@ -118,252 +118,252 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="available" xml:space="preserve">
-    <value>tillgängliga</value>
+    <value>available</value>
   </data>
   <data name="back" xml:space="preserve">
-    <value>tillbaka</value>
+    <value>back</value>
   </data>
   <data name="contact_contactus" xml:space="preserve">
-    <value>Kontakta oss</value>
+    <value>Contact us</value>
   </data>
   <data name="contact_yourname" xml:space="preserve">
-    <value>Ditt namn</value>
+    <value>Your name</value>
   </data>
   <data name="guestbooktitle" xml:space="preserve">
-    <value>Gästbok</value>
+    <value>Guestbook</value>
   </data>
   <data name="guestbook_btn" xml:space="preserve">
-    <value>Publicera meddelandet</value>
+    <value>Publish message</value>
   </data>
   <data name="guestbook_errormsg" xml:space="preserve">
-    <value>Ett fel uppstod i kommunikation med tjänst för gästboken</value>
+    <value>An error occured in the communication with the guestbook service</value>
   </data>
   <data name="guestbook_minimumtxt" xml:space="preserve">
-    <value>Minst två tecken</value>
+    <value>Minimum two characters</value>
   </data>
   <data name="guestbook_msg" xml:space="preserve">
-    <value>Ett meddelande behöver anges</value>
+    <value>A message is requiered</value>
   </data>
   <data name="guestbook_msg_min" xml:space="preserve">
-    <value>Minst två tecken i meddelandet</value>
+    <value>The message must be at least 3 characters</value>
   </data>
   <data name="guestbook_villa" xml:space="preserve">
-    <value>Sjövillan, där festen äger rum.</value>
+    <value>Sjövillan, where the party will take place.</value>
   </data>
   <data name="index_date" xml:space="preserve">
-    <value>14 maj 2016 i Nacka kyrka kl. 15.00</value>
+    <value>Nacka Church 14th of May 2016 at 3.00 PM</value>
   </data>
   <data name="index_days" xml:space="preserve">
-    <value>Dagar</value>
+    <value>Days</value>
   </data>
   <data name="index_h1_title" xml:space="preserve">
-    <value>Nu är vi äntligen gifta!</value>
+    <value>Now we are finally married!</value>
   </data>
   <data name="index_hours" xml:space="preserve">
-    <value>Timmar</value>
+    <value>Hours</value>
   </data>
   <data name="index_info" xml:space="preserve">
-    <value>Stort tack till er alla som gjorde vår bröllopsdag helt fantastisk! Tack också för Eevis underbara sång med vackert pianospel av Päivi och för alla jättefina presenter!</value>
+    <value>Thank you all for making our wedding day amazing! A great thanks also for Eevi's fantastic song with beautiful piano play by Pävi and for wonderful presents!</value>
   </data>
   <data name="index_minutes" xml:space="preserve">
-    <value>Minuter</value>
+    <value>Minutes</value>
   </data>
   <data name="index_pageupdate" xml:space="preserve">
-    <value>Sidan kommer inom kort att uppdateras med bilder!</value>
+    <value>The site will soon be updated with photos!</value>
   </data>
   <data name="index_photoalbum" xml:space="preserve">
-    <value>Fotoalbum</value>
+    <value>Photo Album</value>
   </data>
   <data name="index_photoinfo" xml:space="preserve">
-    <value>Här är ett urval av bilder från våra år tillsammans.</value>
+    <value>Here are photos from our years together.</value>
   </data>
   <data name="index_seconds" xml:space="preserve">
-    <value>Sekunder</value>
-  </data>
-  <data name="index_viewbag_title" xml:space="preserve">
-    <value>Bröllop</value>
+    <value>Seconds</value>
   </data>
   <data name="Information" xml:space="preserve">
     <value>Information</value>
   </data>
+  <data name="Information1" xml:space="preserve">
+    <value>Information</value>
+  </data>
   <data name="info_clothes" xml:space="preserve">
-    <value>Klädsel: Kavaj. Innebär för honom ljus eller mörk kostym och för henne klänning, kjol eller finbyxor.</value>
+    <value>Clothes: Suit. Means for him light or dark suit and for her dress, skirt or pants.</value>
   </data>
   <data name="info_colortheme" xml:space="preserve">
-    <value>Färgtema på bröllopet är lavendel, aprikos och grått.</value>
+    <value>Color theme at the wedding is lavender, apricot and grey.</value>
   </data>
   <data name="info_direction" xml:space="preserve">
-    <value>Vägbeskrivning, från Nacka Kyrka till Sjövillan</value>
+    <value>Travel direction from Nacka Church to Sjövillan</value>
   </data>
   <data name="info_importantinfo" xml:space="preserve">
-    <value>Viktig information</value>
+    <value>Important Information</value>
   </data>
   <data name="info_link" xml:space="preserve">
     <value>Sjövillan</value>
   </data>
   <data name="info_msg" xml:space="preserve">
-    <value>Berätta gärna om eventuella allergier eller annat som vi behöver veta. Det gör du enklast via menyn "Kontakta oss".</value>
+    <value>Please tell us about allergies or other information that we should know. You do this easily via menu "Contact us".</value>
   </data>
   <data name="info_msg2" xml:space="preserve">
-    <value>Gärna såpbubblor på bröllopet, istället för riskastande. 24 stycken små flaskor kommer att delas ut.</value>
+    <value>We would like soap bubbles instead of throwing rice. 24 small bottles will be provided.</value>
   </data>
   <data name="info_osa" xml:space="preserve">
-    <value>O.S.A. senast 7 april. Det går bra att svara på inbjudan till bröllopet här på hemsidan eller via telefon eller mail.</value>
+    <value>RSVP latest 7th of April. You can leave your message to the wedding here at the home site or via phone or e-mail.</value>
   </data>
   <data name="info_partyinfo" xml:space="preserve">
-    <value>Festen kommer att äga rum på Sjövillan i Lilla Nyckelviken, som ligger 5 km från kyrkan. Läs mer om den på följande länk:</value>
+    <value>The party will happen at Sjövillan in Lilla Nyckelviken, that is 5 kilometers from the church. Please read more at this link:</value>
   </data>
   <data name="info_toastmaster" xml:space="preserve">
-    <value>Planerar du att hålla ett tal? Meddela i så fall Torgils Hjalmarson (torgils.hjalmarson@gmail.com), toast master.</value>
+    <value>Are you planning to hold a speech? If so, please inform Torgils Hjalmarson (torgils.hjalmarson@gmail.com), toast master.</value>
   </data>
   <data name="layout_ask" xml:space="preserve">
-    <value>Vid frågor om webbsidan, kontakta Henrik Hjalmarsson (webbansvarig)</value>
+    <value>If you have any questions about the web page, please contact Henrik Hjalmarsson (webmaster)</value>
   </data>
   <data name="layout_menu1" xml:space="preserve">
     <value>Program</value>
   </data>
   <data name="layout_menu2" xml:space="preserve">
-    <value>Önskelista</value>
+    <value>Wish List</value>
   </data>
   <data name="layout_menu3" xml:space="preserve">
-    <value>Viktig information</value>
+    <value>Important information</value>
   </data>
   <data name="layout_menu4" xml:space="preserve">
-    <value>Kontakta oss</value>
+    <value>Contact Us</value>
   </data>
   <data name="layout_menu5" xml:space="preserve">
-    <value>Gästbok</value>
+    <value>Guestbook</value>
   </data>
   <data name="layout_search" xml:space="preserve">
-    <value>Sök</value>
+    <value>Search</value>
   </data>
   <data name="layout_searchstring" xml:space="preserve">
-    <value>Söksträng</value>
+    <value>searchstring</value>
   </data>
   <data name="layout_wedding" xml:space="preserve">
-    <value>Julia och Henriks bröllop</value>
+    <value>Julia and Henrik´s wedding</value>
   </data>
   <data name="layout_wedding_short" xml:space="preserve">
-    <value>Bröllop</value>
+    <value>Wedding</value>
   </data>
   <data name="Link" xml:space="preserve">
-    <value>Länk</value>
+    <value>Link</value>
   </data>
   <data name="linkmissing" xml:space="preserve">
-    <value>Länk saknas</value>
+    <value>Link missing</value>
   </data>
   <data name="login" xml:space="preserve">
-    <value>Logga In</value>
+    <value>Log In</value>
   </data>
   <data name="login_password" xml:space="preserve">
-    <value>Lösenord</value>
+    <value>Password</value>
   </data>
   <data name="login_userid" xml:space="preserve">
-    <value>Inloggningsnamn</value>
+    <value>User Id</value>
   </data>
   <data name="message" xml:space="preserve">
-    <value>Ditt meddelande</value>
+    <value>Your message</value>
   </data>
   <data name="messagemandatory" xml:space="preserve">
-    <value>Ange ett meddelande</value>
+    <value>Please leave a message.</value>
   </data>
   <data name="messages_info" xml:space="preserve">
-    <value>Här kan du lämna meddelanden till Julia och/eller Henrik, t.ex. om eventuella allergier, OSA eller om du bara vill lämna en hälsning.</value>
+    <value>Here you can leave messages to Julia or/and Henrik, for example regarding allergies, RSVP or if you just want to send a private message!</value>
   </data>
   <data name="mobile" xml:space="preserve">
-    <value>Mobil</value>
+    <value>Mobile</value>
   </data>
   <data name="name" xml:space="preserve">
-    <value>Namn</value>
+    <value>Name</value>
   </data>
   <data name="namemandatory" xml:space="preserve">
-    <value>Namn är obligatoriskt</value>
+    <value>Name is required</value>
   </data>
   <data name="of" xml:space="preserve">
-    <value>av</value>
+    <value>of</value>
   </data>
   <data name="password" xml:space="preserve">
-    <value>Lösenord</value>
+    <value>Password</value>
   </data>
   <data name="program_bestman" xml:space="preserve">
     <value>Bestman: Fredrik Hjalmarson</value>
   </data>
   <data name="program_brudgirl" xml:space="preserve">
-    <value>Brudtärna: Ly Kaljumets</value>
-  </data>
-  <data name="program_churchadress" xml:space="preserve">
-    <value>Nacka Kyrka, Gamla Värmdövägen 14</value>
+    <value>Bridesmaid: Ly Kaljumets</value>
   </data>
   <data name="program_dance" xml:space="preserve">
-    <value>Dans och musik</value>
+    <value>Dance and music</value>
   </data>
   <data name="program_dinner" xml:space="preserve">
-    <value>Middag, havsbuffé</value>
+    <value>Dinner, Sea buffet</value>
   </data>
   <data name="program_info" xml:space="preserve">
-    <value>Information kommer</value>
+    <value>Information will follow</value>
   </data>
   <data name="program_marsalk" xml:space="preserve">
-    <value>Marskalk: Per-Åke Christiansson</value>
+    <value>Groomsman: Per-Åke Christiansson</value>
   </data>
   <data name="program_marscher" xml:space="preserve">
-    <value>Bröllopsmasch: Wagners Bröllopsmarsch</value>
+    <value>Wedding Marsch: Wagner's Bridal Chorus</value>
   </data>
   <data name="program_photo" xml:space="preserve">
-    <value>Gruppfotografering utanför Sjövillan. Fotograf: Reza Zaker</value>
+    <value>Group photography outside Sjövillan. Photographer: Reza Zaker</value>
   </data>
   <data name="program_priest" xml:space="preserve">
-    <value>Präst: Gudni Agnarsson</value>
+    <value>Priest: Gudni Agnarsson</value>
   </data>
   <data name="program_toast" xml:space="preserve">
-    <value>Välkomstskål</value>
+    <value>Welcome toast</value>
   </data>
   <data name="program_toastmaster" xml:space="preserve">
     <value>Toastmaster: Torgils Hjalmarson</value>
   </data>
   <data name="program_transport" xml:space="preserve">
-    <value>Transport med abonnerad buss till Sjövillan i Lilla Nyckelviken</value>
+    <value>Transport via charted bus to Sjövillan in Small Nyckelviken</value>
   </data>
   <data name="program_vigsel" xml:space="preserve">
-    <value>Vigsel i Nacka Kyrka</value>
+    <value>Marriage in Nacka Church</value>
   </data>
   <data name="pwmandatory" xml:space="preserve">
-    <value>Lösenord måste anges</value>
+    <value>A password is needed</value>
   </data>
   <data name="Reserve" xml:space="preserve">
-    <value>Tinga</value>
+    <value>Reserve</value>
   </data>
   <data name="send" xml:space="preserve">
-    <value>Skicka</value>
+    <value>Send</value>
   </data>
   <data name="technicalinfo" xml:space="preserve">
-    <value>Är du intresserad av hur webbsidan är utvecklad, klicka på länken.</value>
+    <value>Click here for information about how the site is developed.</value>
   </data>
   <data name="Undo" xml:space="preserve">
-    <value>Ångra</value>
+    <value>Undo</value>
+  </data>
+  <data name="viewbag_title" xml:space="preserve">
+    <value>Wedding</value>
   </data>
   <data name="wishlist" xml:space="preserve">
-    <value>Önskelista</value>
+    <value>Wish List</value>
   </data>
   <data name="wishlist_filepathLock" xml:space="preserve">
-    <value>../Content/images/wishlist/Lock2.png</value>
+    <value>../Content/images/wishlist/Lock2 uk.png</value>
   </data>
   <data name="wishlist_filepathUnlock" xml:space="preserve">
-    <value>../Content/images/wishlist/Unlock2.png</value>
+    <value>../Content/images/wishlist/Unlock2 uk.png</value>
   </data>
   <data name="wishlist_info" xml:space="preserve">
-    <value>Tycker du att någon av presenterna nedan verkar lämpliga? Tinga den i så fall, för att förhinda att flera personer köper samma. Ångrar du dig är det bara att klicka på "Ångra-knappen". Eftersom inloggningen är anonym vet man inte vem som köpt vad.</value>
+    <value>Do you think some of the presents below is an option? If so, please reserve it to stop others from buying the same. If you change your mind just click "undo". Because you log on anonymous no one know who buys what.</value>
   </data>
   <data name="wishlist_travelfund" xml:space="preserve">
-    <value>Resebidrag</value>
+    <value>Travel Contribution</value>
   </data>
   <data name="wishlist_travelfund_text" xml:space="preserve">
-    <value>Bidrag till vår kommande bröllopsresa är välkommet! I så fall går det bra att swisha till Henriks mobilnummer (0046703053431), eller till SEB 5385 00 128 08</value>
+    <value>A contribution to our coming wedding trip is always welcome! If so, please swish to Henrik's mobile (0046703053431) or to bank account SEB 5385 00 128 08</value>
   </data>
   <data name="wishlist_wines" xml:space="preserve">
-    <value>Viner</value>
+    <value>Wines</value>
   </data>
   <data name="wishlist_wines_text" xml:space="preserve">
-    <value>Viner är alltid uppskattat! T.ex. rött, vitt eller mousserande. Vi föredrar torra viner.</value>
+    <value>Wines are always appreciated! For example red, white or sparkling. We prefer dry wines.</value>
   </data>
 </root>
